{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 11,
  "lineage": "e932ff36-6410-902f-3769-e05463de5aa3",
  "resources": [
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:internet-gateway/igw-094da6f7f0d07454c",
            "id": "igw-094da6f7f0d07454c",
            "owner_id": "851725282145",
            "tags": {
              "Name": "prod-vpc-igw"
            },
            "tags_all": {
              "Name": "prod-vpc-igw"
            },
            "vpc_id": "vpc-086cec06fe7bb80b4"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-094da6f7f0d07454c",
            "id": "r-rtb-054e4fc9dd24593401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054e4fc9dd2459340",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_internet_gateway.igw_main",
            "module.prod_vpc.aws_route_table.route_table_public",
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:route-table/rtb-065f41a93c698d094",
            "id": "rtb-065f41a93c698d094",
            "owner_id": "851725282145",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-vpc-private-route-table"
            },
            "tags_all": {
              "Name": "prod-vpc-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cec06fe7bb80b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:route-table/rtb-054e4fc9dd2459340",
            "id": "rtb-054e4fc9dd2459340",
            "owner_id": "851725282145",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-vpc-public-route-table"
            },
            "tags_all": {
              "Name": "prod-vpc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-086cec06fe7bb80b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c19ca001179bd079",
            "route_table_id": "rtb-065f41a93c698d094",
            "subnet_id": "subnet-09279c66cd92cb2f8"
          },
          "dependencies": [
            "module.prod_vpc.aws_route_table.route_table_private",
            "module.prod_vpc.aws_subnet.subnet_private",
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assoc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b33a3be997e919c0",
            "route_table_id": "rtb-054e4fc9dd2459340",
            "subnet_id": "subnet-02d280e3b9cc6924b"
          },
          "dependencies": [
            "module.prod_vpc.aws_route_table.route_table_public",
            "module.prod_vpc.aws_subnet.subnet_public",
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:security-group/sg-07334e3d8e9aab746",
            "description": "Allow inbound HTTP and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07334e3d8e9aab746",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-vpc-sg",
            "name_prefix": "",
            "owner_id": "851725282145",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-086cec06fe7bb80b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:subnet/subnet-09279c66cd92cb2f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09279c66cd92cb2f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-vpc-private-subnet"
            },
            "tags_all": {
              "Name": "prod-vpc-private-subnet"
            },
            "vpc_id": "vpc-086cec06fe7bb80b4"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:subnet/subnet-02d280e3b9cc6924b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d280e3b9cc6924b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725282145",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-vpc-public-subnet"
            },
            "tags_all": {
              "Name": "prod-vpc-public-subnet"
            },
            "vpc_id": "vpc-086cec06fe7bb80b4"
          },
          "dependencies": [
            "module.prod_vpc.aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "module": "module.prod_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725282145:vpc/vpc-086cec06fe7bb80b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0065174358840d30c",
            "default_route_table_id": "rtb-0085dcd05448f037c",
            "default_security_group_id": "sg-0084c9f16119df57c",
            "dhcp_options_id": "dopt-067ffb70001ab9bb6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086cec06fe7bb80b4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0085dcd05448f037c",
            "owner_id": "851725282145",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}